--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     }
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
