--- a/package.json
+++ b/package.json
@@ -96,12 +96,19 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/joy": "^5.0.0-alpha.68",
+    "@mui/material": "^5.11.10",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
+    "ffi-napi": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-grid-layout": "^1.3.4",
+    "react-router-dom": "^6.8.1",
+    "winreg": "^1.2.4"
   },
   "devDependencies": {
     "@electron/notarize": "^1.2.3",
