--- a/package.json
+++ b/package.json
@@ -98,15 +98,20 @@
     "@ant-design/charts": "^1.4.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/joy": "^5.0.0-alpha.68",
     "@mui/material": "^5.11.10",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.3.0",
     "ffi-napi": "^4.0.3",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
+    "react-i18next": "^12.2.0",
     "react-router-dom": "^6.8.1",
     "winreg": "^1.2.4"
   },
